Small styling & text formatting.

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,8 @@
       justify-content: center;
     }
 
-    .main .loading {
+    .main .loading,
+    .main .error {
       margin-top: 1em;
       font-size: 24px;
     }
@@ -160,7 +161,7 @@
         {id: 22, name: 'Busan', img: 'https://i.imgur.com/hICRScm.jpeg'},
         {id: 23, name: 'Paraiso', img: 'https://i.imgur.com/sIDwypu.jpeg'},
         {id: 24, name: 'Rialto', img: 'https://i.imgur.com/QrCMsoy.jpeg'},
-        {id: 25, name: 'Route66', img: 'https://i.imgur.com/LwYJoEu.jpeg'},
+        {id: 25, name: 'Route 66', img: 'https://i.imgur.com/LwYJoEu.jpeg'},
         {id: 26, name: 'Runasapi', img: 'https://i.imgur.com/tYsY0us.jpeg'},
         {id: 27, name: 'Samoa', img: 'https://i.imgur.com/ocVnO3E.jpeg'},
         {id: 28, name: 'Shambali Monastery', img: 'https://i.imgur.com/wNqGeMI.png'},
