--- a/public/results.html
+++ b/public/results.html
@@ -13,7 +13,7 @@
         <a href="/results.html" class="menu-link active">Results</a>
     </nav>
 
-    <h1>Results</h1>
+    <h2>Top Maps</h2>
 
     <div class="main"></div>
 
@@ -25,7 +25,7 @@
             padding: 0;
         }
 
-        h1 {
+        h2 {
             text-align: center;
             margin-top: 1em;
         }
@@ -166,11 +166,51 @@
                 $main.appendChild($table);
             }
 
+            function show_top_modes(top_modes) {
+                const $heading = document.createElement('h2');
+                $heading.textContent = 'Top Modes';
+                $main.appendChild($heading);
+
+                const $table = document.createElement('table');
+                $table.classList.add('results-table');
+
+                // Create table header
+                const $thead = document.createElement('thead');
+                const $headerRow = document.createElement('tr');
+                $headerRow.innerHTML = `
+                    <th>Rank</th>
+                    <th>Mode Name</th>
+                    <th>Votes</th>
+                `;
+                $thead.appendChild($headerRow);
+                $table.appendChild($thead);
+
+                // Create table body
+                const $tbody = document.createElement('tbody');
+                top_modes.forEach((mode, index) => {
+                    const $row = document.createElement('tr');
+                    $row.innerHTML = `
+                        <td class="rank">#${index + 1}</td>
+                        <td class="map-name">${mode.Name}</td>
+                        <td class="vote-count">${mode.Count}</td>
+                    `;
+                    $tbody.appendChild($row);
+                });
+                $table.appendChild($tbody);
+
+                $main.appendChild($table);
+            }
+
             async function main() {
                 const { status, data } = await api_get_top_maps();
                 switch (status) {
                     case 200:
-                        show_top_maps(data?.top_maps);
+                        if (Array.isArray(data?.top_maps)) {
+                            show_top_maps(data.top_maps);
+                        }
+                        if (Array.isArray(data?.top_modes)) {
+                            show_top_modes(data.top_modes);
+                        }
                         break;
 
                     default:
