Update base url.

--- a/public/index.html
+++ b/public/index.html
@@ -130,8 +130,7 @@
 
   <script>
     (async function () {
-      // TODO: change base url
-      const base_url = 'http://localhost/';
+      const base_url = 'https://ow2maps.itsstyg.com/';
       const $main = document.querySelector('.main');
       const default_error = 'There was an error while loading data from the API.';
       const limit_error = "You've reached the daily vote limit.";
