--- a/public/results.html
+++ b/public/results.html
@@ -115,7 +115,7 @@
 
     <script>
         (async function () {
-            const base_url = 'http://localhost/';
+            const base_url = 'https://ow2maps.itsstyg.com/';
             const $main = document.querySelector('.main');
 
             async function api_get_top_maps() {
